<resources>
    <string name="text_sure">Sure</string>
    <string name="text_ok">OK</string>
    <string name="text_cancel">@android:string/cancel</string>
    <string name="text_cancel_upper">CANCEL</string>
    <string name="text_yes">Yes</string>
    <string name="text_yes_upper">YES</string>
    <string name="text_no">No</string>
    <string name="text_no_upper">NO</string>
    <string name="text_cancel_share">Cancel share</string>
    <string name="text_share">Share</string>
    <string name="text_done">Done</string>
    <string name="text_done_upper">DONE</string>
    <string name="text_reminder">Reminder</string>
    <string name="text_take_photo">Take photo</string>
    <string name="text_select_photo">Select from album</string>
    <string name="text_empty">There is no data to show.</string>
    <string name="text_loading">Loading&#8230;</string>
    <string name="text_try_again">Click to try again.</string>
    <string name="text_network_error">Network error.Please try it again.</string>
    <string name="text_all_photos">All Photos</string>
    <string name="text_preview">Preview</string>
    <string name="text_photos">Photos</string>
    <string name="text_search">Search</string>
    <string name="text_settings">Settings</string>
    <string name="text_about">About</string>
    <string name="text_sign_in">Sign in</string>
    <string name="text_login">Login</string>
    <string name="text_retry">Retry</string>
    <string name="text_year">Year</string>
    <string name="text_years">Years</string>
    <string name="text_month">Month</string>
    <string name="text_months">Months</string>
    <string name="text_day">Day</string>
    <string name="text_days">Days</string>
    <string name="text_week">Week</string>
    <string name="text_weeks">Weeks</string>
    <string name="text_hour">Hour</string>
    <string name="text_hours">Hours</string>
    <string name="text_minute">Minute</string>
    <string name="text_minutes">Minutes</string>
    <string name="text_second">Second</string>
    <string name="text_seconds">Seconds</string>
    <string name="text_yesterday">Yesterday</string>
    <string name="text_ago">Ago</string>
    <string name="text_request_permissions">requestPermissions</string>
    <string name="msg_request_nothing">No request</string>
    <string name="msg_error">Error</string>
    <string name="msg_errors">Errors</string>
    <string name="text_list_refresh_success">Refresh Success</string>
    <string name="text_list_refresh_failure">Refresh Failure</string>
    <string name="text_list_load_more_success">LoadMore Success</string>
    <string name="text_list_load_more_failure">LoadMore Failure</string>
    <string name="tip_no_more_list_data">No more data.</string>

    <!--text of date picker-->
    <string name="text_su">S</string>
    <string name="text_m">M</string>
    <string name="text_th">T</string>
    <string name="text_w">W</string>
    <string name="text_t">T</string>
    <string name="text_f">F</string>
    <string name="text_s">S</string>
    <string name="text_network_require">An internet connection is required.please check your network settings.</string>
</resources>