<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:background="@color/white"
    android:clickable="false"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_failure_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:contentDescription="@string/text_about" />

    <TextView
        android:id="@+id/tv_failure_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_14"
        android:clickable="false"
        android:text="@string/text_empty"
        android:textColor="@color/color_000000"
        android:textSize="@dimen/sp_11" />

    <TextView
        android:id="@+id/tv_failure_retry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_9"
        android:clickable="false"
        android:text="@string/text_try_again"
        android:textColor="@color/color_c2c2c2"
        android:textSize="@dimen/sp_11" />
</LinearLayout>